--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "yt-desktop-dl",
-  "version": "1.0.0",
-  "description": "a desktop ytdl",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/matolink/yt-desktop-dl.git"
-  },
-  "keywords": [
-    "youtube"
-  ],
-  "author": "Matias Gutierrez",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/matolink/yt-desktop-dl/issues"
-  },
-  "homepage": "https://github.com/matolink/yt-desktop-dl#readme",
-  "dependencies": {
-    "yt-converter": "^1.3.2"
-  }
+    "name": "yt-desktop-dl",
+    "version": "1.0.0",
+    "description": "a desktop ytdl",
+    "main": "main.js",
+    "scripts": {
+        "start": "electron ."
+    },
+    "repository": "git+https://github.com/matolink/yt-desktop-dl.git",
+    "keywords": [
+        "youtube",
+        "Electron"
+    ],
+    "author": "matolink",
+    "license": "ISC",
+    "dependencies": {
+        "yt-converter": "^1.3.2"
+    },
+    "devDependencies": {
+        "electron": "^22.0.0"
+    },
+    "bugs": {
+        "url": "https://github.com/matolink/yt-desktop-dl/issues"
+    },
+    "homepage": "https://github.com/matolink/yt-desktop-dl#readme"
 }
